# bch-backend

./: .env.example  .gitignore  README.md  bch.db  pyproject.toml  requirements.txt  seed.py
app/: config.py  db.py  explore_data.json  export_bch_data.py  import_to_new_cluster.py  main.py  models.py  redis_client.py  schemas.py  seed_explore_data.py  upload_images_to_gridfs.py  utils.py
app/exported_data/: explore.json
app/models/: explore_model.py  job_model.py  model.py  opportunity_model.py  organization_model.py
app/routers/: auth.py  auth2.py  auth3.py  cache.py  email.py  events.py  explore.py  general_organization.py  health.py  item.py  opportunity.py  opportunity2.py  organization.py  organization2.py  profile.py  profile2.py  users.py
app/services/: auth_service.py  mailer.py  ses_email.py
cdk/: cdk.ts  package-lock.json  package.json
