[project]
name = "bch-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
"fastapi==0.115.0",
"uvicorn[standard]==0.30.6",
"pydantic-settings==2.4.0",
"sqlalchemy[asyncio]==2.0.32",
"asyncpg==0.29.0",
"alembic==1.13.2",
"redis==5.0.7",
"passlib[bcrypt]==1.7.4",
"slowapi==0.1.9",
"python-multipart==0.0.9",
]

[tool.ruff]
line-length = 100,
